--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@
 # http://localhost:8080/h2-console
 # Enabling H2 Console
 spring.h2.console.enabled=true
-spring.profiles.active=prod
+spring.profiles.active=dev
