--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,2 @@
-# To See H2 Console in Browser:admin
-# http://localhost:8080/h2-console
-# Enabling H2 Console
 spring.h2.console.enabled=true
-spring.profiles.active=dev
+spring.profiles.active=prod
